# youtube_video_summary

./: .gitignore  README.md  build.sh  output.txt  pyproject.toml  render.yaml  requirements.txt
mysite/: settings.py
render/: models.py  urls.py  views.py
render/migrations/: 0001_initial.py
render/templates/: home.html  yt_video_validation.html  ytshow.html
